assets/css/style.css
/* ... */
#game-area-instructions ol {
    padding-left: 5vmax;
    margin-bottom: 0;
    font-size: 2vmax;
    line-height: 4vmax;
}
/* Flex set up with assistance from this tutorial: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
.game-control-divs{
    flex-grow: 1;
    width: 30%;
    margin: 0 2%;
    background-color: #E9D358;
    border-radius: 10px;
    box-shadow: inset 5px 5px 8px 1px rgba(255,255,255,0.5), inset -3px -7px 5px 2px rgba(32,52,108,0.5);
}

.game-control-divs h2{
   margin: 1.5vmax 5px;
   font-size: 3vmax;
}

.game-control-divs h3{
    margin: 1.25vmax 5px;
    font-size: 2vmax;
 }

#game-info{
    height:35vmax;
    text-align: center;
    text-align: center;
    font-size: 2vmax;
}

#game-info p{
    margin: 0.5vmax  5px;
    font-size: 1.25vmax;
}

button {
    font-size: 1.75vmax;
    width: 70%;
    font-weight: bold;
    color: #BADDE9;
    background-color: #1B316D;
    border-radius: 5px;
    margin: 1vmax 10px;
    padding: 10px;
    font-family: 'Raleway', sans-serif;
    box-shadow: 0 2px 2px rgba(0,0,0,0.7), inset 3px 3px 3px 0 rgba(255,255,255,0.7), inset -3px -3px 3px 0 rgba(255,255,255,0.5);
}

button:hover {
    opacity: 0.9;
}
#start-game-button {
    font-size: 1.7vmax;
    width: 70%;
}
#how-to-play-button {
    font-size: 1.25vmax;
    width: 60%;
    margin-top: 0.65vmax;
}

#go-back-button {
    font-size: 1.25vmax;
    width: 40%;
    margin-left: 30%
}

#how-to-play-start-button {
    width: 60%;
    margin-left: 20%;
}

#new-game-button {
    position: absolute;
    top: 52%;
    left: 47%;
    font-size: 1vmax;
    width: 25%;
    transform: translateY(-50%) translateX(-50%);
    display: none;
}

#game-status-div{
    width: 75%;
    margin-bottom: 30px;
    height: 17.5vmax;
    text-align: center;
    font-size: 3vmax;
    background-color: #1B316D;
    color: #BADDE9;
}
#game-status-div p{
    margin: 4px;
}
#game-status-div span{
    color: #E9D358;
    font-size: 5vmax;
    font-weight: bold;
}

#player-info-area {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    width: 30%;
    margin: 0 2%;
    justify-content: center;
    align-items: center;
}

#scores-area {
    height:12vmax;
    width:100%;
}

.player-scores-title {
    margin: 1.6vmax 0 0 1.5vmax;
    text-align: center;
    font-size: 1.6vmax;
    line-height: 3.2vmax;
    display: inline-block;
}

.player-scores {
    display: inline-block;
    font-family: 'Raleway' , sans-serif;
    border: 1px solid #BADDE9;
    border-radius: 5px;
    font-size: 1.75vmax;
    width: 1.8vmax;
    text-align: center;
    font-weight: bold;
    color: #BADDE9;
    background-color: #1B316D;
}

/* Assign grid area names. Each grid will represent a card. */

#card-a1 {
    grid-area: a1;
}

#wyn-b1 {
    grid-area: b1;
}

#card-c1 {
    grid-area: c1;
}

#card-d1 {
    grid-area: d1;
}

#card-a2 {
    grid-area: a2;
}

#wyn-b2 {
    grid-area: b2;
}

#card-c2 {
    grid-area: c2;
}

#card-d2 {
    grid-area: d2;
}
#card-a3 {
    grid-area: a3;
}

#wyn-b3 {
    grid-area: b3;
}

#card-c3 {
    grid-area: c3;
}

#card-d3 {
    grid-area: d3;
}

#card-a4 {
    grid-area: a4;
}

#wyn-b4 {
    grid-area: b4;
}

#card-c4 {
    grid-area: c4;
}

#card-d4 {
    grid-area: d4;
}
/* Assistance in developing flex from this article: https://www.freecodecamp.org/news/how-to-center-anything-with-css-align-a-div-text-and-more/ */
#game-grid {
flex: 1 auto;
margin: 10px 25px 10px 5px;
display: grid;
grid-template-columns: repeat(4, 20%);
grid-template-rows: repeat(4, 135px);
column-gap: 3.5%;
row-gap: 15px;
grid-template-areas:
    "a1 a2 a3 a4"
    "b1 b2 b3 b4"
    "c1 c2 c3 c4"
    "d1 d2 d3 d4";
max-width: 100%;
justify-content: center;
visibility: hidden;
}

/* Card flip code from this site: https://dev.to/mugas/flip-cards-with-javascript-2ad0 */
.card {
    display: flex;
    background-color: transparent;
    transform-style: preserve-3d;
    transition-duration: 2s;
    cursor: pointer;
    border: 0;
    z-index: 1;
}
/* Style for reverse of game cards. */
.card-reverse {
    display: flex;
    height: 100%;
    width: 100%;
    margin: 0 10px;
    align-items: center;
    justify-content: center;
    background-color: #E9D358;
    text-align: center;
    line-height: 100px;
    color: #1B316D;
    border-radius: 5px;
    border: 2px solid #BADDE9;
    font-size: 4rem;
    backface-visibility: hidden;
    z-index: 1;
}

.card-reverse:hover {
    transform: scale(1.02);
    border-width: 3px;
}

.card-reverse > p {
    margin-bottom: 0;
}
/* styling for div that will display the animal image. */
.card-front {
    display: flex;
    position: absolute;
    margin: 0 10px;
    right: 0;
    height: 100%;
    width:100%;
    align-items: center;
    justify-content: center;
    background-color: #BADDE9;
    border-radius: 5px;
    border: 2px solid #E9D358;
    transform: rotateY(180deg);
    backface-visibility: hidden;
    z-index: 1;
}

.card-front > img {
    max-width: 90%;
    max-height: 90%;
}

.card.flip {
    transform: rotateY(180deg);
    transition-duration: 2s;
  }
  /* feedback star styling with animation to zoom out when display is changed from none to block by JS. */
  #feedback {
    text-align: center;
    color: #badde9;
    opacity: 0.95;
    position: absolute;
    top: 25%;
    left: 30%; 
    transform: translateY(-50%) translateX(-50%);
    font-size: 25rem;
    display: none;
    animation-name: feedback-zoom;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    transform: translateZ(1000px);
    z-index: 99;
}
@keyframes feedback-zoom {
    from {
        z-index: 98;
        transform: scale(0);
    }
    to {
        z-index: 99;
        transform: scale(1.5);
    }
}
#feedback p{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    text-align: center;
    color: #1B316D;
    font-size: 2.2rem;
}
footer {
    position: fixed;
    bottom: 0;
}
/* ... */

